# Flog

./: LICENSE  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  run.py
backend/app/: deps.py  main.py
backend/app/api/routes/: __init__.py  categories.py  comments.py  platform.py  posts.py
backend/app/api/routes/admin/: __init__.py  comments.py  posts.py  stats.py
backend/app/core/: config.py  database.py  exceptions.py  file_system.py  handlers.py  lifecycle.py
backend/app/crud/: __init__.py  base.py  comment.py  platform.py  post.py
backend/app/models/: __init__.py  comment.py  enums.py  platform.py  post.py
backend/app/schemas/: __init__.py  comment.py  platform.py  post.py  response.py
backend/tests/: conftest.py  test_api.py
backend/tests/routes/: test_root.py
docs/: 项目设计.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/docs/: API 接入文档.md  前端设计.md  项目设计.md
