[project]
name = "backend"
version = "0.1.0"
description = "Fast Log Everything."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[all]>=0.119.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
